# romualdi-2021-ral-soft_terrain_walking

./: .gitignore  CMakeLists.txt  README.md
dockerfiles/: Dockerfile  (+1 more)
src/: CMakeLists.txt
src/ContactModels/: CMakeLists.txt
src/ContactModels/include/SoftTerrainWalking/ContactModels/: ContinuousContactModel.h
src/ContactModels/src/: ContinuousContactModel.cpp
src/ContactModels/tests/: ContinousContactModelTest.cpp
src/KinDynWrapper/: CMakeLists.txt
src/KinDynWrapper/include/SoftTerrainWalking/KinDynWrapper/: Wrapper.h
src/KinDynWrapper/src/: Wrapper.cpp
src/Module/: CMakeLists.txt
src/Module/app/robots/iCubGazeboV2_5_flex/: dcm_walking_compliant_contacts.ini
src/Module/src/: Module.cpp  main.cpp
src/Module/thrifts/: SoftTerrainWalkingCommands.thrift
src/OptimalControlUtilities/: CMakeLists.txt
src/OptimalControlUtilities/src/: CentroidalMomentumElements.cpp  CentroidalMomentumElementsWithCompliantContacts.cpp  CentroidalMomentumRateOfChangeBounds.cpp  CentroidalMomentumRateOfChangeElements.cpp  ContactModelElement.cpp  ContactWrenchFeasibilityElement.cpp  ControlProblemElements.cpp  FeasibilityElements.cpp  FloatingBaseMultiBodyDynamicsElements.cpp  OptimizationProblemElements.cpp  PDController.cpp  RegularizationElements.cpp  VariableHandler.cpp  ZMPElements.cpp
src/OptimalControlUtilities/tests/: CMakeLists.txt  ControlProblemTest.cpp  ControlProblemTestMain.cpp  OptimizationProblemTest.cpp  OptimizationProblemTestMain.cpp  VariableHandlerTest.cpp  VariableHandlerTestMain.cpp
src/OptimalControlUtilitiesRigid/: CMakeLists.txt
src/OptimalControlUtilitiesRigid/src/: ControlProblemElements.cpp  OptimizationProblemElements.cpp  PID.cpp  VariableHandler.cpp
src/Simulator/: CMakeLists.txt
src/Simulator/src/: Simulator.cpp  Visualizer.cpp
src/TrajectoryPlanner/: CMakeLists.txt
src/TrajectoryPlanner/src/: StableDCMModel.cpp  TrajectoryGenerator.cpp
src/WholeBodyControllers/: CMakeLists.txt
src/WholeBodyControllers/src/: MomentumBasedControl.cpp  MomentumBasedControlHelper.cpp
src/WholeBodyControllersRigid/: CMakeLists.txt
src/WholeBodyControllersRigid/src/: InverseKinematics.cpp  QPInverseKinematics.cpp  QPInverseKinematics_osqp.cpp  QPInverseKinematics_qpOASES.cpp  TaskBasedTorqueControl.cpp
(+57 files in other folders)
