add_subdirectory(ContactModels)
add_subdirectory(Simulator)
add_subdirectory(OptimalControlUtilities)
add_subdirectory(OptimalControlUtilitiesRigid)
add_subdirectory(WholeBodyControllers)
add_subdirectory(KinDynWrapper)
add_subdirectory(WholeBodyControllersRigid)
add_subdirectory(TrajectoryPlanner)
add_subdirectory(Module)
